--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agencia XYZ</title>
-  
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/variables.css">
@@ -31,9 +30,7 @@
                     <div class="menu">
                         <span class="hamburguer"></span>
                     </div>
-
                 </label>
-
                 <ul>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
@@ -72,7 +69,6 @@
                     omnis laboriosam quibusdam reiciendis possimus.</p>
             </div>
         </div>
-
         <div class="service">
             <img src="src/images/bolinha2.png" alt="bolinha 2" />
             <div class="service-info">
@@ -82,7 +78,6 @@
                     omnis laboriosam quibusdam reiciendis possimus.</p>
             </div>
         </div>
-
     </section>
     <section class="projects" id="projects">
         <div class="project">
@@ -90,19 +85,16 @@
                 <img src="./src/images/tomatoes.jpg" alt="tomatoes" />
             </a>
         </div>
-
         <div class="project">
             <a href="">
                 <img src="./src/images/landscape.jpg" alt="llandscape" />
             </a>
         </div>
-
         <div class="project">
             <a href="">
                 <img src="./src/images/plants3.jpg" alt="plants" />
             </a>
         </div>
-
         <div class="project">
             <a href="">
                 <img src="./src/images/flowers.jpg" alt="flowes" />
@@ -111,7 +103,6 @@
     </section>
     <footer class="footer" id="contact">
         <h4>Agência XYZ</h4>
-
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -119,20 +110,16 @@
                 <li><a href="#projects">Projects</a></li>
             </ul>
         </nav>
-
         <div class="social">
             <a href="">
                 <i class="fab fa-facebook-square"></i>
             </a>
-
             <a href="">
                 <i class="fab fa-instagram"></i>
             </a>
-
             <a href="">
                 <i class="fab fa-twitter-square"></i>
             </a>
-
             <a href="">
                 <i class="fab fa-pinterest"></i>
             </a>
